# article_index

./: .dockerignore  .env  .env.example  AGENTS.md  Makefile  PROJECT_STRUCTURE.md  README.md  docker  docker-compose.yml  indexes.sql  main.py  pyproject.toml  requirements-dev.txt  requirements-shared.txt  schema.sql  test_api.sh
.planning/: 4-1-PLAN.md  4-1-SUMMARY.md  4-2-PLAN.md  4-2-SUMMARY.md  4-3-PLAN.md  4-3-SUMMARY.md  4-CONTEXT.md  4-PLANS-SUMMARY.md  5-1-PLAN.md  5-2-PLAN.md  5-3-PLAN.md  5-CONTEXT.md  5-IMPLEMENTATION-SUMMARY.md  5-PLANNING-SUMMARY.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.serena/: project.yml
api/: Dockerfile  app.py  auth.py  evidence_shape.py  query_classifier.py  requirements.txt  retrieval_state.py  routing.py  uncertainty_gates.py
docs/: BENCHMARK_GUIDE.md  HNSW_TUNING_GUIDE.md
evaluation/: default_test_suite.json
migrations/: 001_add_content_hash.sql  003_add_rss_support.sql  004_add_hybrid_search.sql  005_add_policy_optimization.sql  006_contextual_policy_routing.sql  007_phase4_hardening.sql
scripts/: benchmark_hnsw.py  benchmark_queries.json  calibration_report.py  policy_regret_analysis.py  replay_policy.py  run_calibration_audit.py  smoke_test.sh  test_replay_ci.py  test_rss_ingestion.py  tune_thresholds.py  verify_phase14.py
shared/: __init__.py  budget_constraint.py  celery_client.py  citation_tracker.py  context_builder.py  context_filter.py  contextual_router_v2.py  database.py  default_policies.py  evaluation.py  evidence_scorer.py  hybrid_retriever.py  ollama_client.py  policy.py  processor.py  (+9 more)
(+67 files in other folders)
